# kiten-krunner-integration

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
kiten-query/: CMakeLists.txt  main.cpp  query-helper.cpp
plugin/: CMakeLists.txt  Messages.sh  kiten_export.h  kitenrunner.cpp  kitenrunner.hpp  plasma-runner-kiten.desktop
plugin/po/ja/: plasma_runner_kiten.po
test/: build.ninja  kiten_export.h  test.cpp
